--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Stellar by HTML5 UP</title>
+		<title>Quit with Brown!</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -21,19 +21,20 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/logo.svg" alt="" /></span>
+						<span class="logo"><img src="images/logo.png" alt="" /></span>
 						<h1>Stellar</h1>
-						<p>Just another free, fully responsive site template<br />
+						<p>Looking for new ways to help you quit?
+FEATURED STUDY - NEW STUDY ENROLLING NOW - CALL 401-863-6681 for more details or email rebecca_gordon@brown.edu Welcome to the Quit Smoking Research Program at Brown University’s Center for Alcohol and Addiction Studies Website. e<br />
 						built by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="#intro" class="active">Introduction</a></li>
-							<li><a href="#first">First Section</a></li>
-							<li><a href="#second">Second Section</a></li>
-							<li><a href="#cta">Get Started</a></li>
+							<li><a href="#intro" class="active">Project PPT-S</a></li>
+							<li><a href="#first">Projects</a></li>
+							<li><a href="#second">Quitting Tips</a></li>
+							<li><a href="#cta">Medications</a></li>
 						</ul>
 					</nav>
 
@@ -45,13 +46,17 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>Ipsum sed adipiscing</h2>
+											<h2>Project PPT-S</h2>
 										</header>
-										<p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-										adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-										Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+										<p>
+
+Do you want to Stop Smoking?
+
+What are the keys to quitting smoking and staying quit? What roles do your mood and your personality play in how you quit smoking? Investigators at Brown University are conducting a research study to test whether a smoking cessation program that includes nicotine replacement therapy, text messaging support, and counseling focused on improving moods and using personal strengths can help smokers quit for good.  Participants receive, at no cost, individual counseling, nicotine replacement therapy and text messaging support.
+
+Call (401) 863-6681 for more information or visit QuitwithBrown.org.</p>
 										<ul class="actions">
-											<li><a href="generic.html" class="button">Learn More</a></li>
+											<li><a href="https://www.trialspark.com/trials/Nicotinetherapy1" class="button">Learn More</a></li>
 										</ul>
 									</div>
 									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
@@ -61,13 +66,17 @@
 						<!-- First Section -->
 							<section id="first" class="main special">
 								<header class="major">
-									<h2>Magna veroeros</h2>
+									<h2>Projects</h2>
 								</header>
 								<ul class="features">
 									<li>
 										<span class="icon major style1 fa-code"></span>
-										<h3>Ipsum consequat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<h3>Project REDUCE</h3>
+										<p>Research Study for Cigarette Smokers who Received Drinking or Drug Treatment in the Past Year
+
+Have you received treatment for drinking or drug use in the past year?  A 6-month research study is being conducted to compare the effects of smoking cigarettes that vary in nicotine content for 6 weeks.
+May earn up to $599 in store gift cards.
+If interested call:  (401) 863-6464 or toll-free at 1-877-374-6577</p>
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
@@ -76,16 +85,13 @@
 									</li>
 									<li>
 										<span class="icon major style5 fa-diamond"></span>
-										<h3>Dolor nullam</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
-									</li>
-								</ul>
-								<footer class="major">
-									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer>
-							</section>
+										<h3>Project Get Fit to Quit</h3>
+										<p>Do You Want to Quit Smoking but are concerned because you are already overweight?We are conducting a research study for cigarette smokers who have struggled to control their weight and are interested in quitting smoking with little or no weight gain.
+You will receive counseling at no cost to you to help you manage your weight & quit smoking.
+Nicotine patches and gum will be provided at no cost.
+You will be compensated for your time.
+Call (401) 648-9495 for more information.</p>
+									
 
 						<!-- Second Section -->
 							<section id="second" class="main special">
