--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	Stellar by HTML5 UP
-	html5up.net | @ajlkn
+	Quit with Brown!
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
@@ -24,17 +23,16 @@
 						<span class="logo"><img src="images/logo.png" alt="" /></span>
 						<h1>Stellar</h1>
 						<p>Looking for new ways to help you quit?
-FEATURED STUDY - NEW STUDY ENROLLING NOW - CALL 401-863-6681 for more details or email rebecca_gordon@brown.edu Welcome to the Quit Smoking Research Program at Brown University’s Center for Alcohol and Addiction Studies Website. e<br />
-						built by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a>.</p>
+Welcome to the Quit Smoking Research Program at Brown University’s Center for Alcohol and Addiction Studies Website. <br />">HTML5 UP</a>.</p>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
 							<li><a href="#intro" class="active">Project PPT-S</a></li>
-							<li><a href="#first">Projects</a></li>
-							<li><a href="#second">Quitting Tips</a></li>
-							<li><a href="#cta">Medications</a></li>
+							<li><a href="#first"class="active">Projects</a></li>
+							<li><a href="#second"class="active">Quitting Tips</a></li>
+							<li><a href="#cta"class="active">Medications</a></li>
 						</ul>
 					</nav>
 
@@ -49,12 +47,12 @@ FEATURED STUDY - NEW STUDY ENROLLING NOW - CALL 401-863-6681 for more details or
 											<h2>Project PPT-S</h2>
 										</header>
 										<p>
-
+FEATURED STUDY - NEW STUDY ENROLLING NOW - CALL 401-863-6681 for more details or email rebecca_gordon@brown.edu 
 Do you want to Stop Smoking?
 
 What are the keys to quitting smoking and staying quit? What roles do your mood and your personality play in how you quit smoking? Investigators at Brown University are conducting a research study to test whether a smoking cessation program that includes nicotine replacement therapy, text messaging support, and counseling focused on improving moods and using personal strengths can help smokers quit for good.  Participants receive, at no cost, individual counseling, nicotine replacement therapy and text messaging support.
 
-Call (401) 863-6681 for more information or visit QuitwithBrown.org.</p>
+Call (401) 863-6681 for more information.</p>
 										<ul class="actions">
 											<li><a href="https://www.trialspark.com/trials/Nicotinetherapy1" class="button">Learn More</a></li>
 										</ul>
@@ -92,7 +90,6 @@ Nicotine patches and gum will be provided at no cost.
 You will be compensated for your time.
 Call (401) 648-9495 for more information.</p>
 									
-
 						<!-- Second Section -->
 							<section id="second" class="main special">
 								<header class="major">
