--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/logo.png" alt="" /></span>
-						<h1>Stellar</h1>
+						<h1>Quit with Brown!</h1>
 						<p>Looking for new ways to help you quit?
-Welcome to the Quit Smoking Research Program at Brown University’s Center for Alcohol and Addiction Studies Website. <br />">HTML5 UP</a>.</p>
+Welcome to the Quit Smoking Research Program at Brown University’s Center for Alcohol and Addiction Studies Website. </p>
 					</header>
 
 				<!-- Nav -->
@@ -76,11 +76,7 @@ Have you received treatment for drinking or drug use in the past year?  A 6-mont
 May earn up to $599 in store gift cards.
 If interested call:  (401) 863-6464 or toll-free at 1-877-374-6577</p>
 									</li>
-									<li>
-										<span class="icon major style3 fa-copy"></span>
-										<h3>Amed sed feugiat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
-									</li>
+									
 									<li>
 										<span class="icon major style5 fa-diamond"></span>
 										<h3>Project Get Fit to Quit</h3>
@@ -88,7 +84,14 @@ If interested call:  (401) 863-6464 or toll-free at 1-877-374-6577</p>
 You will receive counseling at no cost to you to help you manage your weight & quit smoking.
 Nicotine patches and gum will be provided at no cost.
 You will be compensated for your time.
-Call (401) 648-9495 for more information.</p>
+Call (401) 648-9495 for more information.</p> </li>
+								</ul>
+								<footer class="major">
+									<ul class="actions">
+										<li><a href="generic.html" class="button">Learn More</a></li>
+									</ul>
+								</footer>
+							</section>
 									
 						<!-- Second Section -->
 							<section id="second" class="main special">
