--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ Call (401) 863-6681 for more information.</p>
 								</header>
 								<ul class="features">
 									<li>
-										<span class="icon major style1 fa-code"></span>
+										<span class="image"><img src="images/medicine-pill.png" alt=""></span>
 										<h3>Project REDUCE</h3>
 										<p>Research Study for Cigarette Smokers who Received Drinking or Drug Treatment in the Past Year
 
@@ -78,7 +78,7 @@ If interested call:  (401) 863-6464 or toll-free at 1-877-374-6577</p>
 									</li>
 									
 									<li>
-										<span class="icon major style5 fa-diamond"></span>
+										<span class="image"><img src="images/dumbbell.png" alt=""></span>
 										<h3>Project Get Fit to Quit</h3>
 										<p>Do You Want to Quit Smoking but are concerned because you are already overweight?We are conducting a research study for cigarette smokers who have struggled to control their weight and are interested in quitting smoking with little or no weight gain.
 You will receive counseling at no cost to you to help you manage your weight & quit smoking.
@@ -96,14 +96,13 @@ Call (401) 648-9495 for more information.</p> </li>
 						<!-- Second Section -->
 							<section id="second" class="main special">
 								<header class="major">
-									<h2>Ipsum consequat</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<h2>Quitting Tips</h2>
+									<p>Tips and Helpful Information about Quitting Smoking</p>
 								</header>
 								<ul class="statistics">
 									<li class="style1">
 										<span class="icon fa-code-fork"></span>
-										<strong>5,120</strong> Etiam
+										<strong>20</strong> minutes after stopping smoking your heart rate becomes normal.
 									</li>
 									<li class="style2">
 										<span class="icon fa-folder-open-o"></span>
