--- a/index.html
+++ b/index.html
@@ -149,28 +149,80 @@ Call (401) 648-9495 for more information.</p> </li>
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<h2>Aliquam sed mauris</h2>
-							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
+							<h2>Directions to the Center for Alcohol and Addiction Studies
+121 South Main Street, Providence, RI 02903</h2>
+							<p>
+
+———————————————————
+
+ From Boston and All Points North:
+
+· Travel I-95 South to Exit 22-C-B-A (Providence Place)
+toward Downtown 
+
+· Continue on Memorial Boulevard
+
+ · Bear Left on Crawford Street 
+
+· Bear right on South Water Street 
+
+· Take your immediate two lefts which will put you on
+South Main Street
+
+The Public Health Building is in the Hemenway Restaurant building on the left, at 121 South Main Street
+
+———————————————————
+
+ From Warwick and All Points South:
+· Take I-95 North to I-195 East 
+
+· Take Exit 2 (Gano Street/India Street Exit)
+
+ · Turn left at bottom of ramp onto India Street and continue
+down (at bend in road becomes South Water Street)
+
+ · At stop sign, turn right and continue under the overpass.
+
+ · Bear left to the stop light (Shell station on right). Turn left onto Wickenden Street. 
+
+· Take your immediate right onto South Main Street, continue
+down 0.4 miles.
+
+The Public Health Building is in the Hemenway Restaurant building on the left, at 121 South Main Street
+
+———————————————————
+
+ From Fall River and All Points East:
+· Take I-195 West to Exit 2, which is the South Main Street exit.
+
+ · Travel approximately 1/2 mile on South Main Street
+
+The Public Health Building is in the Hemenway Restaurant building on the left, at 121 South Main Street
+
+Parking:
+Paid parking is available in the garage at 121 South Main Street.
+In addition, on-street parking is sometimes available at parking meters located on South Main Street.</p>
 							<ul class="actions">
 								<li><a href="generic.html" class="button">Learn More</a></li>
 							</ul>
 						</section>
 						<section>
-							<h2>Etiam feugiat</h2>
+							<h2>Brown University</h2>
 							<dl class="alt">
 								<dt>Address</dt>
-								<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
+								<dd>1234 The Center for Alcohol and Addiction Studies
+ Box G-S121 
+121 South Main Street
+ Providence, RI 02903</dd>
 								<dt>Phone</dt>
-								<dd>(000) 000-0000 x 0000</dd>
+								<dd>(401) 863-6681</dd>
 								<dt>Email</dt>
-								<dd><a href="#">information@untitled.tld</a></dd>
+								<dd><a href="#">rebecca_gordon@brown.edu</a></dd>
 							</dl>
 							<ul class="icons">
 								<li><a href="#" class="icon fa-twitter alt"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon fa-facebook alt"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon fa-instagram alt"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon fa-github alt"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon fa-dribbble alt"><span class="label">Dribbble</span></a></li>
+								
 							</ul>
 						</section>
 						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
