--- a/index.html
+++ b/index.html
@@ -132,9 +132,25 @@ Call (401) 648-9495 for more information.</p> </li>
 						<!-- Get Started -->
 							<section id="cta" class="main special">
 								<header class="major">
-									<h2>Congue imperdiet</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<h2>Medications</h2>
+									</header>
+								<ul class="features">
+									<li><span class="image"><img src="images/medicine-pill.png" alt=""></span>
+										<h3>Naltrexone</h3>
+									<p>
+
+Naltrexone is a medication that blocks the effects of drugs known as opiates, or narcotics (a class that includes morphine, heroin, or codeine). It competes with these drugs for opioid receptors in the brain. Originally used to treat dependence on opiate drugs, it now has also been approved by the U.S. Food and Drug Administration (FDA) as treatment for alcohol dependence. In addition, naltrexone may be particularly helpful for heavy drinkers who want to quit smoking. Although the precise mechanism of action for naltrexone’s effect is unknown, reports from successfully treated patients suggest the following kinds of effects:
+
+Naltrexone can reduce your urge or desire to drink.
+When abstinence is the goal, Naltrexone helps you remain abstinent.
+Naltrexone can interfere with your desire to continue drinking more if you slip and have a drink.
+Naltrexone may reduce cravings for cigarettes that occur after drinking alcohol.</p>
+										<ul class="features">
+									<li><span class="image"><img src="images/medicine-pill.png" alt=""></span>
+										<h3>Nicotine patch</h3>
+										<p>sfesefsf</p>
+											</li>
+
 								</header>
 								<footer class="major">
 									<ul class="actions">
