--- a/index.html
+++ b/index.html
@@ -165,59 +165,10 @@ Naltrexone may reduce cravings for cigarettes that occur after drinking alcohol.
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<h2>Directions to the Center for Alcohol and Addiction Studies
-121 South Main Street, Providence, RI 02903</h2>
-							<p>
+							<li><a href="https://www.google.com/maps/place/Brown+University+School+of+Public+Health/@41.8250735,-71.4085884,14z/data=!4m8!1m2!2m1!1sgoogle+maps+school+of+public+health!3m4!1s0x89e445160f00ac33:0x80d4b9ed0ee86d85!8m2!3d41.823961!4d-71.407022" class="major">Directions to the Center for Alcohol and Addiction Studies
+121 South Main Street, Providence, RI 02903</a></li>
 
-———————————————————
-
- From Boston and All Points North:
-
-· Travel I-95 South to Exit 22-C-B-A (Providence Place)
-toward Downtown 
-
-· Continue on Memorial Boulevard
-
- · Bear Left on Crawford Street 
-
-· Bear right on South Water Street 
-
-· Take your immediate two lefts which will put you on
-South Main Street
-
-The Public Health Building is in the Hemenway Restaurant building on the left, at 121 South Main Street
-
-———————————————————
-
- From Warwick and All Points South:
-· Take I-95 North to I-195 East 
-
-· Take Exit 2 (Gano Street/India Street Exit)
-
- · Turn left at bottom of ramp onto India Street and continue
-down (at bend in road becomes South Water Street)
-
- · At stop sign, turn right and continue under the overpass.
-
- · Bear left to the stop light (Shell station on right). Turn left onto Wickenden Street. 
-
-· Take your immediate right onto South Main Street, continue
-down 0.4 miles.
-
-The Public Health Building is in the Hemenway Restaurant building on the left, at 121 South Main Street
-
-———————————————————
-
- From Fall River and All Points East:
-· Take I-195 West to Exit 2, which is the South Main Street exit.
-
- · Travel approximately 1/2 mile on South Main Street
-
-The Public Health Building is in the Hemenway Restaurant building on the left, at 121 South Main Street
-
-Parking:
-Paid parking is available in the garage at 121 South Main Street.
-In addition, on-street parking is sometimes available at parking meters located on South Main Street.</p>
+</p>
 							<ul class="actions">
 								<li><a href="generic.html" class="button">Learn More</a></li>
 							</ul>
