--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ Call (401) 648-9495 for more information.</p> </li>
 								<ul class="features">
 									<li><span class="image"><img src="images/medicine-pill.png" alt=""></span>
 										<h3>Naltrexone</h3>
-									<p>
+									<p style="text-align:left;">
 
 Naltrexone is a medication that blocks the effects of drugs known as opiates, or narcotics (a class that includes morphine, heroin, or codeine). It competes with these drugs for opioid receptors in the brain. Originally used to treat dependence on opiate drugs, it now has also been approved by the U.S. Food and Drug Administration (FDA) as treatment for alcohol dependence. In addition, naltrexone may be particularly helpful for heavy drinkers who want to quit smoking. Although the precise mechanism of action for naltrexone’s effect is unknown, reports from successfully treated patients suggest the following kinds of effects:
 
@@ -145,10 +145,10 @@ Naltrexone can reduce your urge or desire to drink.
 When abstinence is the goal, Naltrexone helps you remain abstinent.
 Naltrexone can interfere with your desire to continue drinking more if you slip and have a drink.
 Naltrexone may reduce cravings for cigarettes that occur after drinking alcohol.</p>
-										<ul class="features">
+										
 									<li><span class="image"><img src="images/medicine-pill.png" alt=""></span>
 										<h3>Nicotine patch</h3>
-										<p>sfesefsf</p>
+										<p style="text-align:left;"> style="text-align:left;" What is the Nicotine patch? It is a small, nicotine-containing patch that adheres to your skin. The Nicotine patch is very thin and controls how fast nicotine passes through the skin into your bloodstream. Unlike the sudden jolts of nicotine delivered by cigarettes, the amount of nicotine you receive remains relatively smooth throughout the 24 period you wear the patch. This helps to reduce the cravings you may have for nicotine.</p>
 											</li>
 
 								</header>
@@ -165,12 +165,12 @@ Naltrexone may reduce cravings for cigarettes that occur after drinking alcohol.
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<li><a href="https://www.google.com/maps/place/Brown+University+School+of+Public+Health/@41.8250735,-71.4085884,14z/data=!4m8!1m2!2m1!1sgoogle+maps+school+of+public+health!3m4!1s0x89e445160f00ac33:0x80d4b9ed0ee86d85!8m2!3d41.823961!4d-71.407022" class="major">Directions to the Center for Alcohol and Addiction Studies
+							<li><a href="https://www.google.com/maps/dir//Brown+University+School+of+Public+Health,+121+S+Main+St,+Providence,+RI+02903/@41.8250735,-71.4085884,14z/data=!4m16!1m6!3m5!1s0x89e445160f00ac33:0x80d4b9ed0ee86d85!2sBrown+University+School+of+Public+Health!8m2!3d41.823961!4d-71.407022!4m8!1m0!1m5!1m1!1s0x89e445160f00ac33:0x80d4b9ed0ee86d85!2m2!1d-71.407022!2d41.823961!3e3" class="actions"> Directions to the Center for Alcohol and Addiction Studies
 121 South Main Street, Providence, RI 02903</a></li>
 
 </p>
 							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn More</a></li>
+								
 							</ul>
 						</section>
 						<section>
