--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@ Naltrexone is a medication that blocks the effects of drugs known as opiates, or
 Naltrexone can reduce your urge or desire to drink.
 When abstinence is the goal, Naltrexone helps you remain abstinent.
 Naltrexone can interfere with your desire to continue drinking more if you slip and have a drink.
-Naltrexone may reduce cravings for cigarettes that occur after drinking alcohol.</p>
+										Naltrexone may reduce cravings for cigarettes that occur after drinking alcohol.</p><br></br>
 										
 									<li><span class="image"><img src="images/medicine-pill.png" alt=""></span>
 										<h3>Nicotine patch</h3>
-										<p style="text-align:left;"> style="text-align:left;" What is the Nicotine patch? It is a small, nicotine-containing patch that adheres to your skin. The Nicotine patch is very thin and controls how fast nicotine passes through the skin into your bloodstream. Unlike the sudden jolts of nicotine delivered by cigarettes, the amount of nicotine you receive remains relatively smooth throughout the 24 period you wear the patch. This helps to reduce the cravings you may have for nicotine.</p>
+										<p style="text-align:left;"> What is the Nicotine patch? It is a small, nicotine-containing patch that adheres to your skin. The Nicotine patch is very thin and controls how fast nicotine passes through the skin into your bloodstream. Unlike the sudden jolts of nicotine delivered by cigarettes, the amount of nicotine you receive remains relatively smooth throughout the 24 period you wear the patch. This helps to reduce the cravings you may have for nicotine.</p>
 											</li>
 
 								</header>
