--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ Welcome to the Quit Smoking Research Program at Brown University’s Center for 
 											<h2>Project PPT-S</h2>
 										</header>
 										<p>
-FEATURED STUDY - NEW STUDY ENROLLING NOW - CALL 401-863-6681 for more details or email rebecca_gordon@brown.edu 
+											<b>FEATURED STUDY - NEW STUDY ENROLLING NOW </b> - CALL 401-863-6681 for more details or email rebecca_gordon@brown.edu 
 Do you want to Stop Smoking?
 
 What are the keys to quitting smoking and staying quit? What roles do your mood and your personality play in how you quit smoking? Investigators at Brown University are conducting a research study to test whether a smoking cessation program that includes nicotine replacement therapy, text messaging support, and counseling focused on improving moods and using personal strengths can help smokers quit for good.  Participants receive, at no cost, individual counseling, nicotine replacement therapy and text messaging support.
