--- a/generic.html
+++ b/generic.html
@@ -30,7 +30,7 @@
 
 						<!-- Content -->
 							<section id="content" class="main">
-								<span class="image main"><img src="images/pic04.jpg" alt="" /></span>
+								<span class="image main"><img src="images/home-page-slider-01.jpg" alt="" /></span>
 								<h2>Why is quitting so hard?</h2>
 								<p>
 Many ex-smokers say quitting was the hardest thing they ever did. Do you feel hooked? You are probably addicted to nicotine. Nicotine is in all tobacco products. Nicotine makes you feel calm and satisfied. At the same time, you feel more alert and focused. The more you smoke, the more nicotine you need to feel good. Soon, you don’t feel “normal” without nicotine. It takes time to break free from nicotine addiction. It may take more than one try to quit for good. So don’t give up too soon. You will feel good again.</p>
@@ -49,11 +49,11 @@ Being with other smokers
 You may even feel uncomfortable not smoking at times or in places where you usually have a cigarette. These times and places are called “triggers.” That’s because they trigger, or turn on, cigarette cravings. Breaking these habits is the hardest part of quitting for some smokers.</p>
 								
 						<h2>Before you quit, take these five important steps:</h2>
-								<p>S = Set a quit date.
-T = Tell family, friends, and co-workers that you plan to quit.
-A = Anticipate and plan for the challenges you’ll face while quitting.
-R = Remove cigarettes and other tobacco products from your home, car, and work.
-T = Talk to your doctor about getting help to quit.</p>
+								<p>S = Set a quit date.</p>
+<p>T = Tell family, friends, and co-workers that you plan to quit.</p>
+<p>A = Anticipate and plan for the challenges you’ll face while quitting.</p>
+<p>R = Remove cigarettes and other tobacco products from your home, car, and work.</p>
+<p>T = Talk to your doctor about getting help to quit.</p>
 								<h2>Did You Know?</h2>
 								<p>Your body gets more than nicotine when you smoke.
 There are more than 4,000 chemicals in cigarette smoke. Some of them are also in wood varnish, the insect poison DDT, arsenic, nail polish remover, and rat poison.
