--- a/generic.html
+++ b/generic.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Tips and Helpful Information about Quitting Smoking</title>
+		<title>Quitting Smoking</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -56,8 +56,8 @@ You may even feel uncomfortable not smoking at times or in places where you usua
 <p>T = Talk to your doctor about getting help to quit.</p>
 								<h2>Did You Know?</h2>
 								<p>Your body gets more than nicotine when you smoke.
-There are more than 4,000 chemicals in cigarette smoke. Some of them are also in wood varnish, the insect poison DDT, arsenic, nail polish remover, and rat poison.
-The soot, tar, gases, and other poisons in cigarettes harm your body over time. They damage your heart and lungs. They also make it harder for you to taste, smell, and fight infections.</p>
+									There are more than 4,000 chemicals in cigarette smoke. </p><p>Some of them are also in wood varnish, the insect poison DDT, arsenic, nail polish remover, and rat poison.
+The soot, tar, gases, and other poisons in cigarettes harm your body over time.</p><p> They damage your heart and lungs. They also make it harder for you to taste, smell, and fight infections.</p>
 								
 								
 							</section>
