--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ Call (401) 648-9495 for more information.</p> </li>
 								<p class="content"></p>
 								<footer class="major">
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn More</a></li>
+										<li><a href="QuittingSmoking.html" class="button">Learn More</a></li>
 									</ul>
 								</footer>
 							</section>
