--- a/index.html
+++ b/index.html
@@ -122,6 +122,8 @@ Call (401) 648-9495 for more information.</p> </li>
 								<footer class="major">
 									<ul class="actions">
 										<li><a href="QuittingSmoking.html" class="button">Learn More</a></li>
+										<ul class="actions">
+										<li><a href="resources.html" class="button special">Resources</a></li>
 									</ul>
 								</footer>
 							</section>
