--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Call (401) 863-6681 for more information.</p>
 											<li><a href="https://www.trialspark.com/trials/Nicotinetherapy1" class="button">Learn More</a></li>
 										</ul>
 									</div>
-									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+									<span class="image"><img src="images/home-page-slider-02-1.jpg" alt="" /></span>
 								</div>
 							</section>
 
