--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ Call (401) 648-9495 for more information.</p> </li>
 										<li><a href="QuittingSmoking.html" class="button">Learn More</a></li>
 										<ul class="actions">
 											
-										<li><a href="resources.html" class="button special">Resources</a></li>
+										<li><a href="Resources.html" class="button special">Resources</a></li>
 									</ul>
 								</footer>
 							</section>
