--- a/index.html
+++ b/index.html
@@ -127,6 +127,13 @@ Call (401) 648-9495 for more information.</p> </li>
 										<li><a href="elements.html" class="button special">Resources</a></li>
 									</ul>
 								</footer>
+									<footer class="major">
+									<ul class="actions">
+										<li><a href="generic.html" class="button special">Get Started</a></li>
+										<li><a href="generic.html" class="button">Learn More</a></li>
+									</ul>
+								</footer>
+							</section>
 							</section>
 
 						<!-- Get Started -->
