--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ Call (401) 648-9495 for more information.</p> </li>
 								
 									<footer class="major">
 									<ul class="actions">
-										<li><a href="QuittingSmoking.html" class="button special">Quitting Smoking</a></li>
+										<li><a href="QuittingSmoking.html" class="button special">Learn More</a></li>
 										<li><a href="elements.html" class="button">Resources</a></li>
 									</ul>
 								</footer>
