--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ Naltrexone can interfere with your desire to continue drinking more if you slip 
 					<footer id="footer">
 						<section>
 <a href="https://www.google.com/maps/dir//Brown+University+School+of+Public+Health,+121+S+Main+St,+Providence,+RI+02903/@41.8250735,-71.4085884,14z/data=!4m16!1m6!3m5!1s0x89e445160f00ac33:0x80d4b9ed0ee86d85!2sBrown+University+School+of+Public+Health!8m2!3d41.823961!4d-71.407022!4m8!1m0!1m5!1m1!1s0x89e445160f00ac33:0x80d4b9ed0ee86d85!2m2!1d-71.407022!2d41.823961!3e3" class="actions"> Directions to the Center for Alcohol and Addiction Studies
-121 South Main Street, Providence, RI 02903</a></li>
+121 South Main Street, Providence, RI 02903</a></li><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2973.190505708362!2d-71.40910048429812!3d41.82419577676426!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e445161aa65e53%3A0xe77378fa6ad287bc!2s121+S+Main+St%2C+Providence%2C+RI+02903!5e0!3m2!1sen!2sus!4v1510608244053" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
 
 </p>
 							<ul class="actions">
