--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ Call (401) 863-6681 for more information.</p>
 									
 										<span class="image"><img src="images/medicine-pill.png" alt=""></span>
 										<h3>Project REDUCE</h3>
-										<p>Research Study for Cigarette Smokers who Received Drinking or Drug Treatment in the Past Year
+										<pstyle="text-align:left;">Research Study for Cigarette Smokers who Received Drinking or Drug Treatment in the Past Year
 
 Have you received treatment for drinking or drug use in the past year?  A 6-month research study is being conducted to compare the effects of smoking cigarettes that vary in nicotine content for 6 weeks.
 May earn up to $599 in store gift cards.
@@ -78,7 +78,7 @@ If interested call:  (401) 863-6464 or toll-free at 1-877-374-6577</p>
 									
 										<span class="image"><img src="images/dumbbell.png" alt=""></span>
 										<h3>Project Get Fit to Quit</h3>
-										<p>Do You Want to Quit Smoking but are concerned because you are already overweight?We are conducting a research study for cigarette smokers who have struggled to control their weight and are interested in quitting smoking with little or no weight gain.
+										<pstyle="text-align:left;"> Do You Want to Quit Smoking but are concerned because you are already overweight?We are conducting a research study for cigarette smokers who have struggled to control their weight and are interested in quitting smoking with little or no weight gain.
 You will receive counseling at no cost to you to help you manage your weight & quit smoking.
 Nicotine patches and gum will be provided at no cost.
 You will be compensated for your time.
