--- a/elements.html
+++ b/elements.html
@@ -18,16 +18,14 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Quitting Tips</h1>
-						<p>Other Information About Quitting Smoking</p>
+						<h1>Resources and Links</h1>
+						
 					</header>
 
 				<!-- Main --> 
 					<div id="main">
 
 						<!-- Content -->
-							<section id="content" class="main">
-								<span class="image main"><img src="images/home-page-slider-01.jpg" alt="" /></span>
 								<h2>Great American Smokeout</h2>
 								<p>The American Cancer Society is marking the 36th Great American Smokeout on November 17 by encouraging smokers to use the date to make a plan to quit, or to plan in advance and quit smoking that day. By doing so, smokers will be taking an important step towards a healthier life – one that can lead to reducing cancer risk.
 
