--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 -->
 <html>
 	<head>
-		<title>Quit with Brown!</title>
+		<title>Quit with Brown!/title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -21,10 +21,11 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						
-						<h1>Quit with Brown!</h1>
+						<span class="image main"><img src="images/Untitled-1.png" alt="" /></span><h5>Quit with Brown</h5>
 						<p>Looking for new ways to help you quit?
 Welcome to the Quit Smoking Research Program at Brown University’s Center for Alcohol and Addiction Studies Website. </p>
 					</header>
+				
 
 				<!-- Nav -->
 					<nav id="nav">
