--- a/Resources.html
+++ b/Resources.html
@@ -21,24 +21,24 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Quitting Tips</h1>
-						<p>Other Information About Quitting Smoking</p>
+						<h1>Resources and Links</h1>
+						
 					</header>
 
 				<!-- Main -->
 					<div id="main">
 
 						<!-- Content -->
+						<section>
 							<section id="content" class="main">
-								<span class="image main"><img src="images/home-page-slider-01.jpg" alt="" /></span>
-								<h2>Great American Smokeout</h2>
+									<h2>Great American Smokeout</h2>
 								<p>The American Cancer Society is marking the 36th Great American Smokeout on November 17 by encouraging smokers to use the date to make a plan to quit, or to plan in advance and quit smoking that day. By doing so, smokers will be taking an important step towards a healthier life – one that can lead to reducing cancer risk.
 
 Tobacco use remains the single largest preventable cause of disease and premature death in the US, yet more than 46 million Americans still smoke. However, more than half of these smokers have attempted to quit for at least one day in the past year.
 
 Quitting is hard, but you can increase your chances of success with help. The American Cancer Society can tell you about the steps you can take to quit smoking and provide the resources and support that can increase your chances of quitting successfully. To learn about the available tools, call the American Cancer Society at 1-800-227-2345. You can also find free tips and tools below.
 
-www.cancer.org/Healthy/StayAwayfromTobacco/GreatAmericanSmokeout/index </p>
+www.cancer.org/Healthy/StayAwayfromTobacco/GreatAmericanSmokeout/index </p></section>
 								
 								<p>Rhode Island Tobacco Control Network
 
