--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ Naltrexone can interfere with your desire to continue drinking more if you slip 
 								
 							</ul>
 						</section>
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; 2017 - Quit WIth Brown - All rights reserved.. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
