--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						
-						<span class="image"><img src="images/Untitled-1.png" alt=""><h5>Quit with Brown</h5>
+						<span class="image"><img src="images/Untitled-1.png" alt=""></span>
+						<h5>Quit with Brown</h5>
 						<p>Looking for new ways to help you quit?
 Welcome to the Quit Smoking Research Program at Brown University’s Center for Alcohol and Addiction Studies Website. </p>
 					</header>
