--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						
-						<span class="image"><img src="images/Untitled-1.png" alt="" style="width:128px;height:128px;></style></span>
+						<section id="content" class="main">
+								<span class="image main"><img src="images/untitled-1.png" alt="" /></span>
 						<h1>Quit with Brown</h1>
 						<p>Looking for new ways to help you quit?
 Welcome to the Quit Smoking Research Program at Brown University’s Center for Alcohol and Addiction Studies Website. </p>
