--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
 			<div id="wrapper">
 
 				<!-- Header -->
+				  <img src="images/untitled-1.png" />
 					<header id="header" class="alt">
 						
 						<section id="content" class="main">
-								<span class="image main"><img src="images/untitled-1.png" alt="" /></span>
+								
 						<h1>Quit with Brown</h1>
 						<p>Looking for new ways to help you quit?
 Welcome to the Quit Smoking Research Program at Brown University’s Center for Alcohol and Addiction Studies Website. </p>
