--- a/Resources.html
+++ b/Resources.html
@@ -30,7 +30,7 @@
 
 						<!-- Content -->
 						<section>
-							<section id="content" class="main">
+						<div class="eight columns offset-by-two">
 									<h2>Great American Smokeout</h2>
 								<p>The American Cancer Society is marking the 36th Great American Smokeout on November 17 by encouraging smokers to use the date to make a plan to quit, or to plan in advance and quit smoking that day. By doing so, smokers will be taking an important step towards a healthier life – one that can lead to reducing cancer risk.
 
@@ -109,7 +109,7 @@ In-person assistance in registering for Quitline services. Limited nicotine repl
 The Rhode Island Smokers’ Quitline is a free service that provides the individualized quit support you need to be successful. A trained quit coach will help assess your situation and develop a customized plan to quit that fits your needs. Free cessation information, multi-session telephone counseling, and self-help materials.</p>
 							</section>
 
-					</div>
+				</div> </div>
 <!-- Footer -->
 					<footer id="footer">
 						<section>
@@ -121,6 +121,7 @@ The Rhode Island Smokers’ Quitline is a free service that provides the individ
 								
 							</ul>
 						</section>
+		
 						<section>
 							<h2>Brown University</h2>
 							<dl class="alt">
@@ -140,6 +141,7 @@ The Rhode Island Smokers’ Quitline is a free service that provides the individ
 								
 							</ul>
 						</section>
+		
 						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
