--- a/Resources.html
+++ b/Resources.html
@@ -30,7 +30,7 @@
 
 						<!-- Content -->
 						<section>
-						<div class="eight columns offset-by-two">
+						<div class="container">
 									<h2>Great American Smokeout</h2>
 								<p>The American Cancer Society is marking the 36th Great American Smokeout on November 17 by encouraging smokers to use the date to make a plan to quit, or to plan in advance and quit smoking that day. By doing so, smokers will be taking an important step towards a healthier life – one that can lead to reducing cancer risk.
 
