--- a/Resources.html
+++ b/Resources.html
@@ -31,7 +31,11 @@
 						<!-- Content -->
 						<section>
 						<div class="container">
-									<h2>Great American Smokeout</h2>
+									<h2<style type="text/css">
+<!--
+.tab { margin-left: 40px; }
+-->
+</style>Great American Smokeout</h2>
 								<p>The American Cancer Society is marking the 36th Great American Smokeout on November 17 by encouraging smokers to use the date to make a plan to quit, or to plan in advance and quit smoking that day. By doing so, smokers will be taking an important step towards a healthier life – one that can lead to reducing cancer risk.
 
 Tobacco use remains the single largest preventable cause of disease and premature death in the US, yet more than 46 million Americans still smoke. However, more than half of these smokers have attempted to quit for at least one day in the past year.
