--- a/elements.html
+++ b/elements.html
@@ -36,48 +36,26 @@ Quitting is hard, but you can increase your chances of success with help. The Am
 
 www.cancer.org/Healthy/StayAwayfromTobacco/GreatAmericanSmokeout/index </p>
 								
-								<p style="margin-left: 40px">Rhode Island Tobacco Control Network
+<style="margin-left: 40px">
 
-www.ritcn.org/helpingsmokersquit
-
-Rhode Island Quitline
-
-www.quitworksri.org/welcome/trytostop
-
-Information from the Centers for Disease Control and Prevention
-
- www.cdc.gov/tobacco
-
-Information on Quitting Smoking
-
-www.smokefree.gov
-
-National Tobacco Cessation Collaborative
-
-www.tobacco-cessation.org
-
-American Lung Association
-
-www.ffsonline.org
-
-Become an EX Program
-
-Relearn life without Cigarettes
-
-www.becomeanex.org
-
-RI Department of Health
-
-RI Tobacco Control Program
-
-www.quitnowri.com | www.health.ri.gov/tobacco </p>
+<pstyle="margin-left: 40px"><ul style="list-style-type:none">
+  <li>Rhode Island Tobacco Control Network <p><a href="www.ritcn.org/helpingsmokersquit">www.ritcn.org/helpingsmokersquit</a></p> </li>
+  <li>Rhode Island Quitline <p><a href="www.quitworksri.org/welcome/trytosto"> www.quitworksri.org/welcome/trytostop</a></p></li>
+  <li>Information from the Centers for Disease Control and Prevention<p><a href="www.cdc.gov/tobacco"> www.cdc.gov/tobacco</a></p> </li>
+   <li>Information on Quitting Smoking <p><a href="www.cdc.gov/tobacco"> www.cdc.gov/tobacco</a></p>www.smokefree.gov </li>
+  <li>National Tobacco Cessation Collaborative <p><a href="www.tobacco-cessation.org"> www.tobacco-cessation.org</a></p></li>
+  <li>American Lung Association <p><a href="www.ffsonline.org"> www.ffsonline.orgo</a></p> </li>
+   <li>Become an EX Program Relearn life without Cigarettes<p><a href="www.becomeanex.org"> www.becomeanex.org</a></p>  </li>
+  <li>RI Department of Health RI Tobacco Control Program <p><a href="www.quitnowri.com"> www.quitnowri.com</a></p><p><a href="www.health.ri.gov/tobacco"> www.health.ri.gov/tobacco</a></p> </li></p>
+ 
+</ul>  
 
 <h2 style="margin-left: 40px">Tobacco Cessation and Treatment Program</h2>
 								<p style="margin-left: 40px">(401) 519-1970
 
 Free group or individual counseling and info sessions to uninsured and under-insured populations across the state. Assessment services to create customized treatment plans. Free nicotine replacement therapy (restrictions apply) and quit materials available.</p>
 								<h2 style="margin-left: 40px">Medicaid Cessation Services</h2>
-								<pstyle="margin-left: 40px"> DHS Info Line (401) 462-5300
+								<p style="margin-left: 40px"> DHS Info Line (401) 462-5300
 
 Mandatory cessation coverage for Managed Care and Fee-For-Service members. Quit medications, nicotine replacement therapy, and individual counseling. Restrictions may apply.</p>
 								
@@ -106,6 +84,7 @@ The Rhode Island Smokers’ Quitline is a free service that provides the individ
 							</section>
 
 					</div>
+		<br>
 <!-- Footer -->
 					<footer id="footer">
 						<section>
