--- a/elements.html
+++ b/elements.html
@@ -51,34 +51,34 @@ www.cancer.org/Healthy/StayAwayfromTobacco/GreatAmericanSmokeout/index </p>
 </ul>  
 
 <h2 style="margin-left: 40px">Tobacco Cessation and Treatment Program</h2>
-								<p style="margin-left: 40px">(401) 519-1970
+								<p style="margin-left: 40px"><b>(401) 519-1970<b><br>
 
 Free group or individual counseling and info sessions to uninsured and under-insured populations across the state. Assessment services to create customized treatment plans. Free nicotine replacement therapy (restrictions apply) and quit materials available.</p>
 								<h2 style="margin-left: 40px">Medicaid Cessation Services</h2>
-								<p style="margin-left: 40px"> DHS Info Line (401) 462-5300
+								<p style="margin-left: 40px"><b> DHS Info Line (401) 462-5300</b><br>
 
 Mandatory cessation coverage for Managed Care and Fee-For-Service members. Quit medications, nicotine replacement therapy, and individual counseling. Restrictions may apply.</p>
 								
 						<h2 style="margin-left: 40px">Private Health Insurance Coverage</h2>
-								<p style="margin-left: 40px">www.ohic.ri.gov
+								<b><p style="margin-left: 40px">www.ohic.ri.gov</b><br>
 
 Mandatory cessation coverage, not including self-insured plans. Quit medications, nicotine replacement therapy, and counseling. Restrictions may apply. Call the phone number listed on your insurance card for details.</p>
 								<h2 style="margin-left: 40px">Metro-Area Services</h2>
-								<p style="margin-left: 40px">(401) 780-2520
+								<p style="margin-left: 40px"><b>(401) 780-2520</b><br>
 
 Free quit support available to uninsured Providence residents. Call for a location near you. Providence Community Health Center members should call their health center directly for assistance.</p>
 								
 								<h2 style="margin-left: 40px">Women & Infants Family Van Program</h2>
-								<p style="margin-left: 40px">(401) 780-2520
+								<p style="margin-left: 40px"><b>(401) 780-2520
 
-(401) 277-3629
+(401) 277-3629</b><br>
 
 In-person assistance in registering for Quitline services. Limited nicotine replacement therapy and quit materials.</p>
 
 <h2 style="margin-left: 40px">Smokers’ Quitline</h2>
-								<p style="margin-left: 40px">(401) 780-2520
+								<p style="margin-left: 40px"><b>(401) 780-2520
 
-1-800-QuitNow | 1-800-784-8669
+1-800-QuitNow | 1-800-784-8669</b><br>
 
 The Rhode Island Smokers’ Quitline is a free service that provides the individualized quit support you need to be successful. A trained quit coach will help assess your situation and develop a customized plan to quit that fits your needs. Free cessation information, multi-session telephone counseling, and self-help materials.</p>
 							</section>
