--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 			<div id="wrapper">
 
 				<!-- Header -->
-				  <img src="images/untitled-1.png" />
+				    <div id="header">
+             <img src="images/Untitled-1.png" width="1000" height="200" alt="logo" />
+ 
 					<header id="header" class="alt">
 						
 						<section id="content" class="main">
