--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 				<!-- Header -->
 				    <div id="header">
-             <img src="images/Untitled-1.png" width="1000" height="200" alt="logo" />
+             <img src="images/Untitled-1.png" alt="logo" />
  
 					<header id="header" class="alt">
 						
