--- a/elements.html
+++ b/elements.html
@@ -34,7 +34,7 @@ Tobacco use remains the single largest preventable cause of disease and prematur
 
 Quitting is hard, but you can increase your chances of success with help. The American Cancer Society can tell you about the steps you can take to quit smoking and provide the resources and support that can increase your chances of quitting successfully. To learn about the available tools, call the American Cancer Society at <strong> 1-800-227-2345 </strong>. You can also find free tips and tools below.
 
-<p><a href="www.cancer.org/Healthy/StayAwayfromTobacco/GreatAmericanSmokeout/index">www.cancer.org/Healthy/StayAwayfromTobacco/GreatAmericanSmokeout/index</a></p> </p>
+<pstyle="margin-left: 40px; margin-right:10px;"><a href="www.cancer.org/Healthy/StayAwayfromTobacco/GreatAmericanSmokeout/index">www.cancer.org/Healthy/StayAwayfromTobacco/GreatAmericanSmokeout/index</a></p> </p>
 								
 <style="margin-left: 40px">
 
@@ -51,7 +51,7 @@ Quitting is hard, but you can increase your chances of success with help. The Am
 </ul>  
 
 <h2 style="margin-left: 40px">Tobacco Cessation and Treatment Program</h2>
-								<p style="margin-left: 40px"><strong>(401) 519-1970<strong><br>
+								<p style="margin-left: 40px"><strong>(401) 519-1970</strong><br>
 
 Free group or individual counseling and info sessions to uninsured and under-insured populations across the state. Assessment services to create customized treatment plans. Free nicotine replacement therapy (restrictions apply) and quit materials available.</p>
 								<h2 style="margin-left: 40px">Medicaid Cessation Services</h2>
@@ -64,7 +64,7 @@ Mandatory cessation coverage for Managed Care and Fee-For-Service members. Quit 
 
 Mandatory cessation coverage, not including self-insured plans. Quit medications, nicotine replacement therapy, and counseling. Restrictions may apply. Call the phone number listed on your insurance card for details.</p>
 								<h2 style="margin-left: 40px">Metro-Area Services</h2>
-								<p style="margin-left: 40px"><strong>(401) 780-2520</strong><br>
+								<p style="margin-left: 40px; margin-right:10px;"><strong>(401) 780-2520</strong><br>
 
 Free quit support available to uninsured Providence residents. Call for a location near you. Providence Community Health Center members should call their health center directly for assistance.</p>
 								
@@ -74,7 +74,7 @@ Free quit support available to uninsured Providence residents. Call for a locati
 In-person assistance in registering for Quitline services. Limited nicotine replacement therapy and quit materials.</p>
 
 <h2 style="margin-left: 40px">Smokers’ Quitline</h2>
-								<p style="margin-left: 40px"><strong>(401) 780-2520 |
+								<p style="margin-left: 40px; margin-right:10px;"><strong>(401) 780-2520 |
 
 1-800-QuitNow (1-800-784-8669)</strong><br>
 
