--- a/elements.html
+++ b/elements.html
@@ -28,11 +28,11 @@
 						<!-- Content -->
 						<br>
 								<h2 style="margin-left: 40px; margin-right:10px;">Great American Smokeout</h2>
-								<p style="margin-left: 40px; margin-right:10px;">The American Cancer Society is marking the 36th Great American Smokeout on November 17 by encouraging smokers to use the date to make a plan to quit, or to plan in advance and quit smoking that day. By doing so, smokers will be taking an important step towards a healthier life – one that can lead to reducing cancer risk.
+								<p style="margin-left: 40px; margin-right:20px;">The American Cancer Society is marking the 36th Great American Smokeout on November 17 by encouraging smokers to use the date to make a plan to quit, or to plan in advance and quit smoking that day. By doing so, smokers will be taking an important step towards a healthier life – one that can lead to reducing cancer risk.
 
 Tobacco use remains the single largest preventable cause of disease and premature death in the US, yet more than 46 million Americans still smoke. However, more than half of these smokers have attempted to quit for at least one day in the past year.
 
-Quitting is hard, but you can increase your chances of success with help. The American Cancer Society can tell you about the steps you can take to quit smoking and provide the resources and support that can increase your chances of quitting successfully. To learn about the available tools, call the American Cancer Society at <strong> 1-800-227-2345 </strong>. You can also find free tips and tools below.
+Quitting is hard, but you can increase your chances of success with help. The American Cancer Society can tell you about the steps you can take to quit smoking and provide the resources and support that can increase your chances of quitting successfully. To learn about the available tools, call the American Cancer Society at    <strong> 1-800-227-2345 </strong>. You can also find free tips and tools below.<br>
 
 <pstyle="margin-left: 40px; margin-right:10px;"><a href="www.cancer.org/Healthy/StayAwayfromTobacco/GreatAmericanSmokeout/index">www.cancer.org/Healthy/StayAwayfromTobacco/GreatAmericanSmokeout/index</a></p> </p>
 								
@@ -64,7 +64,7 @@ Mandatory cessation coverage for Managed Care and Fee-For-Service members. Quit 
 
 Mandatory cessation coverage, not including self-insured plans. Quit medications, nicotine replacement therapy, and counseling. Restrictions may apply. Call the phone number listed on your insurance card for details.</p>
 								<h2 style="margin-left: 40px">Metro-Area Services</h2>
-								<p style="margin-left: 40px; margin-right:10px;"><strong>(401) 780-2520</strong><br>
+								<p style="margin-left: 40px; margin-right:20px;"><strong>(401) 780-2520</strong><br>
 
 Free quit support available to uninsured Providence residents. Call for a location near you. Providence Community Health Center members should call their health center directly for assistance.</p>
 								
@@ -74,7 +74,7 @@ Free quit support available to uninsured Providence residents. Call for a locati
 In-person assistance in registering for Quitline services. Limited nicotine replacement therapy and quit materials.</p>
 
 <h2 style="margin-left: 40px">Smokers’ Quitline</h2>
-								<p style="margin-left: 40px; margin-right:10px;"><strong>(401) 780-2520 |
+								<p style="margin-left: 40px; margin-right:20px;"><strong>(401) 780-2520 |
 
 1-800-QuitNow (1-800-784-8669)</strong><br>
 
