--- a/elements.html
+++ b/elements.html
@@ -32,7 +32,7 @@
 
 Tobacco use remains the single largest preventable cause of disease and premature death in the US, yet more than 46 million Americans still smoke. However, more than half of these smokers have attempted to quit for at least one day in the past year.
 
-Quitting is hard, but you can increase your chances of success with help. The American Cancer Society can tell you about the steps you can take to quit smoking and provide the resources and support that can increase your chances of quitting successfully. To learn about the available tools, call the American Cancer Society at    <strong> 1-800-227-2345 </strong>. You can also find free tips and tools below.<br>
+Quitting is hard, but you can increase your chances of success with help. The American Cancer Society can tell you about the steps you can take to quit smoking and provide the resources and support that can increase your chances of quitting successfully. To learn about the available tools, call the American Cancer Society at  <br>  <strong> 1-800-227-2345 </strong>. You can also find free tips and tools below.<br>
 
 <pstyle="margin-left: 40px; margin-right:10px;"><a href="www.cancer.org/Healthy/StayAwayfromTobacco/GreatAmericanSmokeout/index">www.cancer.org/Healthy/StayAwayfromTobacco/GreatAmericanSmokeout/index</a></p> </p>
 								
