--- a/elements.html
+++ b/elements.html
@@ -113,7 +113,7 @@ The Rhode Island Smokers’ Quitline is a free service that provides the individ
 								
 							</ul>
 						</section>
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; 2017 - Quit With Brown - All rights reserved. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
