--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 				<!-- Header -->
 				
-             <img src="images/Untitled-1.png" alt="logo" />
+             <img src="images/Untitled-1.png" alt="logo" style="width:128px;height:128px;" />
  
 					<header id="header" class="alt">
 						
