--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 						<section id="content" class="main">
 								
 						<h1>Quit with Brown</h1>
-						<p>Looking for new ways to help you quit?<br>
-Welcome to the Quit Smoking Research Program at Brown University’s Center for Alcohol and Addiction Studies Website. </p>
+						<p>
+Welcome to the Quit Smoking Research Program at Brown University’s Center for Alcohol and Addiction Studies Website.<br> Looking for new ways to help you quit?</p>
 					</header>
 				
 
