--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@ Welcome to the Quit Smoking Research Program at Brown University’s Center for 
 											<h2>Project PPT-S</h2>
 										</header>
 										<p>
-											<b>FEATURED STUDY - NEW STUDY ENROLLING NOW </b> - CALL 401-863-6681 for more details or email rebecca_gordon@brown.edu 
+											<b>FEATURED STUDY - NEW STUDY ENROLLING NOW </b> - CALL 401-863-6681 for more details or email rebecca_gordon@brown.edu <br>
 Do you want to Stop Smoking?
 
-What are the keys to quitting smoking and staying quit? What roles do your mood and your personality play in how you quit smoking? Investigators at Brown University are conducting a research study to test whether a smoking cessation program that includes nicotine replacement therapy, text messaging support, and counseling focused on improving moods and using personal strengths can help smokers quit for good.  Participants receive, at no cost, individual counseling, nicotine replacement therapy and text messaging support.
+What are the keys to quitting smoking and staying quit? What roles do your mood and your personality play in how you quit smoking? Investigators at Brown University are conducting a research study to test whether a smoking cessation program that includes nicotine replacement therapy, text messaging support, and counseling focused on improving moods and using personal strengths can help smokers quit for good.  Participants receive, at no cost, individual counseling, nicotine replacement therapy and text messaging support.<br>
 
 Call (401) 863-6681 for more information.</p>
 										<ul class="actions">
@@ -79,7 +79,7 @@ Call (401) 863-6681 for more information.</p>
 										<p style="text-align:left;">Research Study for Cigarette Smokers who Received Drinking or Drug Treatment in the Past Year
 
 Have you received treatment for drinking or drug use in the past year?  A 6-month research study is being conducted to compare the effects of smoking cigarettes that vary in nicotine content for 6 weeks.
-May earn up to $599 in store gift cards.
+May earn up to $599 in store gift cards.<br>
 If interested call:  (401) 863-6464 or toll-free at 1-877-374-6577</p>
 									
 										<span class="image"><img src="images/dumbbell.png" alt=""></span>
