--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 								
 						<h1>Quit with Brown</h1>
 						<p>
-Welcome to the Quit Smoking Research Program at Brown University’s Center for Alcohol and Addiction Studies Website.<br> Looking for new ways to help you quit?</p>
+Welcome to the Quit Smoking Research Program at Brown University’s Center for Alcohol and Addiction Studies <br> Looking for new ways to help you quit?</p>
 					</header>
 				
 
