--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ Naltrexone can interfere with your desire to continue drinking more if you slip 
 							<h2>Brown University</h2>
 							<dl class="alt">
 								<dt>Address</dt>
-								<dd>1234 The Center for Alcohol and Addiction Studies
+								<dd>The Center for Alcohol and Addiction Studies
  Box G-S121 
 121 South Main Street
  Providence, RI 02903</dd>
