--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ Call (401) 648-9495 for more information.</p>
 							<section id="second" class="main special">
 								<header class="major">
 									<h2>Quitting Tips</h2>
-									<p>Tips and Helpful Information about Quitting Smoking</p>
+									<p>Did you know?</p>
 								</header>
 								<ul class="statistics">
 									<li class="style1">
