--- a/elements.html
+++ b/elements.html
@@ -37,11 +37,11 @@ Tobacco use remains the single largest preventable cause of disease and prematur
 
 Quitting is hard, but you can increase your chances of success with help. The American Cancer Society can tell you about the steps you can take to quit smoking and provide the resources and support that can increase your chances of quitting successfully. To learn about the available tools, call the American Cancer Society at  <br>  <strong> 1-800-227-2345 </strong>. You can also find free tips and tools below.<br>
 
-<pstyle="margin-left: 40px; margin-right:10px;"><a href="www.cancer.org/Healthy/StayAwayfromTobacco/GreatAmericanSmokeout/index">www.cancer.org/Healthy/StayAwayfromTobacco/GreatAmericanSmokeout/index</a></p> </p>
+<p style="margin-left: 40px; margin-right:10px;"><a href="www.cancer.org/Healthy/StayAwayfromTobacco/GreatAmericanSmokeout/index">www.cancer.org/Healthy/StayAwayfromTobacco/GreatAmericanSmokeout/index</a></p> </p>
 								
 <style="margin-left: 40px">
 
-<pstyle="margin-left: 40px"><ul style="list-style-type:none">
+<p style="margin-left: 40px"><ul style="list-style-type:none">
   <li>Rhode Island Tobacco Control Network <p><a href="www.ritcn.org/helpingsmokersquit">www.ritcn.org/helpingsmokersquit</a></p> </li>
   <li>Rhode Island Quitline <p><a href="www.quitworksri.org/welcome/trytosto"> www.quitworksri.org/welcome/trytostop</a></p></li>
   <li>Information from the Centers for Disease Control and Prevention<p><a href="www.cdc.gov/tobacco"> www.cdc.gov/tobacco</a></p> </li>
@@ -82,10 +82,10 @@ In-person assistance in registering for Quitline services. Limited nicotine repl
 1-800-QuitNow (1-800-784-8669)</strong><br>
 
 The Rhode Island Smokers’ Quitline is a free service that provides the individualized quit support you need to be successful. A trained quit coach will help assess your situation and develop a customized plan to quit that fits your needs. Free cessation information, multi-session telephone counseling, and self-help materials.</p>
-							</section>
+							<br></section>
 
 					</div>
-		<br>
+		
 <!-- Footer -->
 					<footer id="footer">
 						<section>
